--- a/package.json
+++ b/package.json
@@ -33,5 +33,7 @@
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "url-loader": "^0.5.9"
+  }
 }
