--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-stage-0": "^6.3.13",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
+    "react-hammerjs": "^0.5.0",
     "react-motion": "^0.5.0",
     "react-motion-drawer": "^2.1.5",
     "react-redux": "^4.4.5",
