--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "./node_modules/.bin/webpack-dev-server --content-base src --inline --hot",
+    "deploy": "NODE_ENV=production ./node_modules/.bin/webpack && cp src/index.html public/index.html && cp src/client.min.js public/client.min.js && firebase deploy",
+
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
